--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,18 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/supplychain_db
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=rithwik
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-server.port=8080
+server.port=8081
+
+spring.sql.init.mode=never
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=rithwik261@gmail.com
+spring.mail.password=awphsmnqijbviqf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
