--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.mail.password=awphsmnqijbviqf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Kolkata
+spring.jackson.time-zone=Asia/Kolkata
+
+
